# nanoserve

./: .gitignore  README.md  batchbench.py  bench.py  chat.py  generate.py  pyproject.toml  readbench.py
docs/: ARCHITECTURE.md  PLAN.md  README.md  _config.yml  index.md
docs/daily/: TEMPLATE.md  day-01.md  day-02.md  day-03.md  day-04.md  day-05.md  day-06.md  day-07.md  day-08.md  day-09.md  day-10.md  day-11.md  day-12.md  day-13.md  day-14.md  day-15.md  day-16.md  day-17.md  day-18.md  day-19.md  day-20.md  day-21.md  day-22.md  day-23.md  day-24.md  day-25.md  day-27.md  day-28.md  day-29.md  index.md  week-01-plan.md
docs/daily/data/: day-13-bench.csv  day-20-readbench.csv  day-24-readbench.csv  day-29-batchbench-hol.csv  day-29-batchbench.csv
scripts/: download_weights.py
src/nanoserve/: __init__.py  batch.py  batchbench.py  benchmark.py  cache.py  config.py  engine.py  layers.py  loader.py  model.py  readbench.py  sampling.py  scheduler.py  server.py
src/nanoserve/kernels/: __init__.py  paged_attention.py  tlsim.py  triton_paged_attention.py
tests/: reference.py  test_batch.py  test_batchbench.py  test_batchbench_model.py  test_batched_cache.py  test_benchmark.py  test_cache.py  test_config.py  test_generate.py  test_layers.py  test_loader.py  test_model.py  test_paged_attention.py  test_paged_kernel.py  test_readbench.py  test_readbench_cache.py  test_sampling.py  test_smoke.py  test_tlsim.py  test_triton_paged_attention.py
