[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoserve"
version = "0.0.0"
description = "A from-scratch LLM inference engine you can read in an afternoon."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.3",
    "safetensors>=0.4",
    "transformers>=4.44",   # tokenizer + HF reference for verification only
    "numpy>=1.24",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
# triton ships with the linux GPU torch wheel; pin here only if you need a specific version.

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
